[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "TerrorisminIsrael"
authors = [
    {name = "Benyamin Besthof", email = "bbesthof@mail.yu.edu"},
]
maintainers = [
    {name = "Benyamin Besthof"},
]
description = "Introduction, Exploraty Data Analysis, and Inferences and Insights."
readme = "README.md"
keywords = ["python", "summary", "EDA", "Inference" ]
license = {file = "LICENSE"}
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.11.6"
dependencies = [
    "seaborn>=0.13.0",
    "pandas>=2.1.1",
    "matplotlib>=3.8.0",
    "numpy>=1.26.0",
]
version= "0.1.0" 

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"package" = ["*"]